[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "my-vLLM"
version = "1.2.0"
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
    "numpy",
    "GPTQModel",
]

[project.urls]
Homepage="https://github.com/lzz775519441/my-vLLM"

[tool.setuptools.packages.find]
where = ["."]
include = ["myvllm*"]
